--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Resets */
+@layer base {
+  * {
+    margin: 0;
+    padding: 0;
+    -webkit-tap-highlight-color: transparent;
+  }
+  html,
+  body {
+    min-width: fit-content;
+  }
+  h1 {
+    @apply text-3xl md:text-4xl;
+  }
+  h1,
+  h2,
+  h3 {
+    @apply leading-snug md:leading-tight;
+  }
+}
