--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,15 @@
     @apply leading-snug md:leading-tight;
   }
 }
+
+@layer components {
+  .btn {
+    @apply inline-flex appearance-none items-center justify-center select-none relative whitespace-nowrap align-middle outline-none leading-tight rounded-md h-8 min-w-[2rem] ps-3 pe-3 font-bold text-lg;
+  }
+  .btn-blue {
+    @apply text-white bg-blue-500 hover:bg-blue-600 active:bg-blue-700 disabled:hover:bg-blue-500;
+  }
+  .title::before {
+    @apply content-[''] cursor-[inherit] block absolute top-0 left-0 z-0 w-full h-full;
+  }
+}
